apps/overseerr/deployment-default-overseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: overseerr
    environment: prod
  name: overseerr
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: overseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: overseerr
        environment: prod
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
            weight: 100
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - arm64
                - amd64
      automountServiceAccountToken: true
      containers:
      - env:
        - name: TZ
          value: Europe/London
        image: sctx/overseerr
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/status
            port: 5055
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: overseerr
        ports:
        - containerPort: 5055
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/v1/status
            port: 5055
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 350Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /app/config
          mountPropagation: HostToContainer
          name: config
        - mountPath: /app/config/db
          mountPropagation: None
          name: data
          subPath: db
      - args:
        - replicate
        - -config
        - /etc/litestream.yml
        image: litestream/litestream
        imagePullPolicy: IfNotPresent
        name: litestream
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 64Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          mountPropagation: None
          name: data
        - mountPath: /etc/litestream.yml
          mountPropagation: None
          name: litestream-config
          subPath: litestream.yml
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir:
          sizeLimit: 500Mi
        name: data
      - name: config
        persistentVolumeClaim:
          claimName: overseerr-config-sw
      - configMap:
          defaultMode: 420
          name: overseerr-litestream
          optional: false
        name: litestream-config
