apps/overseerr/ingress-default-overseerr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
  labels:
    app: overseerr
    environment: prod
  name: overseerr
  namespace: default
spec:
  ingressClassName: traefik
  rules:
  - host: overseerr.brmartin.co.uk
    http:
      paths:
      - backend:
          service:
            name: overseerr
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - overseerr.brmartin.co.uk
    secretName: wildcard-brmartin-tls
